# CanteenKart

./: .gitignore  README.md  ROUTES.md  app.py  devserver.sh  home.html  menu.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.idx/: dev.nix
app/: __init__.py  config.py  extensions.py
app/blueprints/: __init__.py
app/blueprints/auth/: routes.py
app/models/: __init__.py  analytics.py  menu_item.py  order.py  user.py  wallet.py
controllers/: auth.py  cart.py  menu.py  orders.py  owners.py  recommendations.py  users.py  utils.py
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 0001_initial.py
models/: database.py  models.py  schema.sql
static/css/: output.css
static/js/: script.js
templates/: admin.html  base.html  cart.html  confirmation.html  home.html  index.html  login.html  signup.html
templates/auth/: auth.html  login.html  signup.html
templates/components/: alerts.html  footer.html  forms.html  navbar.html
templates/errors/: 404.html  500.html
templates/owner/: add_raw_item.html  dashboard.html  edit_raw_item.html  owner_menu.html  owner_orders.html  raw_items.html  scanner.html  stock.html  user_detail.html  users_list.html
templates/user/: cart.html  checkout.html  dashboard.html  menu.html  order_status.html  orders_history.html  profile.html
tests/: test_app.py  test_auth.py
